[package]
name = "lazy-cogs"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Harrisonn <j.h.m.t.v.10@gmail.com>"]
description = "Lazy Cogs is a implementation of lazy clonable data structures"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/OJarrisonn/LazyCogs"
repository = "https://github.com/OJarrisonn/LazyCogs"
categories = ["memory-management", "data-structures"]
keywords = ["immutable-data-structures", "lazy", "laziness", "immutable", "clone"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
